--- a/thesis/Classes/CUEDthesisPSnPDF.cls
+++ b/thesis/Classes/CUEDthesisPSnPDF.cls
@@ -54,6 +54,8 @@
 \usepackage{StyleFiles/lettrine}
 \usepackage{booktabs}
 \usepackage{mathtools}
+\usepackage{subfig}
+
 %\usepackage[utf8x]{inputenc}	% Doporucujeme pouzivat UTF-8 (unicode).
 %Bibliography
 %uncomment next line to change bibliography name to references for Book document class
