--- a/thesis/chapter1.tex
+++ b/thesis/chapter1.tex
@@ -119,12 +119,12 @@ to the higher layer. This concept is similar to TCP/IP
 protocol.
 
 
-
+ 
     \begin{figure}[!htbp]
       \begin{center}
         \leavevmode
         \ifpdf
-        \includegraphics[scale =.6]{architecture}
+        \includegraphics[scale = 1]{architecture}
         \else
         \includegraphics[bb = 92 86 545 742, height=6in]{architecture.png}
         \fi
@@ -175,7 +175,7 @@ have any resources.
       \begin{center}
         \leavevmode
         \ifpdf
-        \includegraphics[height=10cm]{resource}
+        \includegraphics[scale = 1]{resources}
         \else
         \includegraphics[bb = 92 86 545 742, height=6in]{resource.png}
         \fi
