--- a/thesis/chapter2.tex
+++ b/thesis/chapter2.tex
@@ -1,4 +1,5 @@
 \chapter{Data Mining}
+\label{chap:dataMining}
 Virtual Observatory may be seen as data infrastructure. It enables
 astronomers to get data more easily in a uniform way. But there is
 another and even bigger problem now. How to deal with such amount of
