--- a/thesis/references.bib
+++ b/thesis/references.bib
@@ -127,6 +127,46 @@
   publisher={Morgan Kaufmann Pub}
 }
 
+@article{silaj2010systematic,
+  title={{A Systematic Study of H$\alpha$ Profiles of Be Stars}},
+  author={Silaj, J. and Jones, CE and Tycner, C. and Sigut, TAA and Smith, AD},
+  journal={The Astrophysical Journal Supplement Series},
+  volume={187},
+  pages={228},
+  year={2010},
+  publisher={IOP Publishing}
+}
+
+
+@article{hirata1984star,
+  title={{The Be star phenomena. II-Spectral formation and structure of envelopes}},
+  author={Hirata, R. and Kogure, T.},
+  journal={Bulletin of the Astronomical Society of India},
+  volume={12},
+  pages={109--151},
+  issn={0304-9523},
+  year={1984}
+}
+
+@article{van1995halpha,
+  title={{Halpha emission and infrared excess in Be stars: probing the circumstellar disc.}},
+  author={Van Kerkwijk, MH and Waters, L. and Marlborough, JM},
+  journal={Astronomy and Astrophysics},
+  volume={300},
+  pages={259},
+  issn={0004-6361},
+  year={1995}
+}
+
+@article{slettebak1988stars,
+  title={{The Be stars}},
+  author={Slettebak, A.},
+  journal={Publications of the Astronomical Society of the Pacific},
+  volume={100},
+  pages={770--784},
+  issn={0004-6280},
+  year={1988}
+}
 
 
 
