--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -9,7 +9,7 @@
     \pdfinfo { /Title  (Thesis)
                /Creator (TeX)
                /Producer (pdfTeX)
-               /Author (Jaroslav Vazny jaroslav.vazny@gmail.com)
+               /Author (Jaroslav Vážný jaroslav.vazny@gmail.com)
                /CreationDate (D:20030101000000)  %format D:YYYYMMDDhhmmss
                /ModDate (D:20030815213532)
                /Subject (Thesis)
